# BatchMake

./: .gitattributes  BatchMake.cxx  Batchmake.files  Batchmake.includes  CMakeLists.txt  CommandLineArgumentParser.cxx  Copyright.txt  DartConfig.cmake  bmConfigure.h.in
ApplicationWrapper/: ApplicationWrapper.cxx  ApplicationWrapper.h  ApplicationWrapperParam.cxx  ApplicationWrapperParam.h  CMakeLists.txt  bmApplicationListGUI.fl  bmApplicationListGUIBase.h  bmApplicationListGUIControls.cxx  bmApplicationListGUIControls.h  bmApplicationWrapperGUI.fl  bmApplicationWrapperGUIBase.h  bmApplicationWrapperGUIControls.cxx
Applications/: BatchMake.cxx  BatchMake.rc  CMakeLists.txt  CheckMemory.cxx  GetCPUInfo.cxx  GetCPUSpeed.cxx  GetMemoryInfo.cxx  Whetstone.cxx  Whetstone.h  bmGridSend.cxx  bmGridStore.cxx  bmSliceExtractor.cxx
Code/: ApplicationWrapper.cxx  ApplicationWrapper.h  ApplicationWrapperParam.cxx  ApplicationWrapperParam.h  ApplicationWrapperParamSub.cxx  ApplicationWrapperParamSub.h  BatchMake.cxx  CMakeLists.txt  CommandLineArgumentParser.h  bmApplicationListGUI.fl  bmApplicationListGUIBase.h  bmApplicationListGUIControls.cxx  bmApplicationListGUIControls.h  bmApplicationWrapperGUI.fl  bmApplicationWrapperGUIBase.h  bmApplicationWrapperGUIControls.cxx  bmApplicationWrapperGUIControls.h  bmEditor.cxx  bmEditor.h  bmIcons.h  bmLaunch.cxx  bmLaunch.h  bmProgressGUI.fl  bmProgressGUIBase.h  bmProgressGUIControls.cxx  bmProgressGUIControls.h  bmProgressManager.cxx  bmProgressManager.h  bmProgressManagerGUI.cxx  bmProgressManagerGUI.h  bmScriptAbortAction.cxx  bmScriptAbortAction.h  bmScriptAction.cxx  bmScriptAction.h  bmScriptActionManager.cxx  bmScriptActionManager.h  bmScriptAddErrorAction.cxx  bmScriptAddErrorAction.h  bmScriptAppendFileAction.cxx  bmScriptAppendFileAction.h  (+105 more)
Code/Dashboard/: bmDashboardSend.cxx  bmDashboardSend.h  bmScriptActionManagerDashboard.cxx  bmScriptAddDashboardLabelAction.cxx  bmScriptAddDashboardLabelAction.h  bmScriptAddMethodIdealOutputAction.cxx  bmScriptAddMethodIdealOutputAction.h  bmScriptAddMethodInputAction.cxx  bmScriptAddMethodInputAction.h  bmScriptAddMethodOutputAction.cxx  bmScriptAddMethodOutputAction.h  bmScriptCloseTCPSocketAction.cxx  bmScriptCloseTCPSocketAction.h  bmScriptCreateDashboardAction.cxx  bmScriptCreateDashboardAction.h  bmScriptCreateExperimentAction.cxx  bmScriptCreateExperimentAction.h  bmScriptCreateGraphAction.cxx  bmScriptCreateGraphAction.h  bmScriptCreateMethodAction.cxx  bmScriptCreateMethodAction.h  bmScriptDashboardExperimentAction.cxx  bmScriptDashboardExperimentAction.h  bmScriptDashboardHostAction.cxx  bmScriptDashboardHostAction.h  bmScriptDashboardKeyAction.cxx  bmScriptDashboardKeyAction.h  bmScriptDashboardNotifyAction.cxx  bmScriptDashboardNotifyAction.h  bmScriptDashboardSendAction.cxx  bmScriptDashboardSendAction.h  bmScriptDashboardUserAction.cxx  bmScriptDashboardUserAction.h  bmScriptDbClearAction.cxx  bmScriptDbClearAction.h  bmScriptDbSendFileAction.cxx  bmScriptDbSendFileAction.h  bmScriptDbSendValueAction.cxx  bmScriptDbSendValueAction.h  bmScriptOpenTCPSocketAction.cxx  (+5 more)
Code/Grid/: bmGrid.cxx  bmGrid.h  bmScriptAddMethodIdealOutputActionGrid.cxx  bmScriptAddMethodInputActionGrid.cxx  bmScriptAddMethodOutputActionGrid.cxx  bmScriptCondorPostScriptAction.cxx  bmScriptCondorPostScriptAction.h  bmScriptCondorPreScriptAction.cxx  bmScriptCondorPreScriptAction.h  bmScriptGridDataHostAction.h  (+37 more)
Dashboard/: CMakeLists.txt  HttpRequest.cxx  HttpRequest.h  SliceExtractor.cxx  SliceExtractor.h  bmDashboardSend.cxx  bmDashboardSend.h  bmGridSend.cxx  bmGridStore.cxx  bmScriptActionManagerDashboard.cxx  bmScriptAddDashboardLabelAction.cxx  bmScriptAddMethodIdealOutputAction.cxx  bmScriptAddMethodInputAction.cxx  bmScriptAddMethodOutputAction.cxx  bmScriptAddMethodOutputAction.h  bmScriptCloseTCPSocketAction.cxx  bmScriptCreateDashboardAction.cxx  bmScriptCreateExperimentAction.cxx  bmScriptCreateMethodAction.cxx  bmScriptCreateMethodAction.h  bmScriptDashboardExperimentAction.cxx  bmScriptDashboardHostAction.cxx  bmScriptDashboardKeyAction.cxx  bmScriptDashboardNotifyAction.cxx  bmScriptDashboardSendAction.cxx  bmScriptDashboardUserAction.cxx  bmScriptDashboardUserAction.h  bmScriptDbClearAction.cxx  bmScriptDbSendFileAction.cxx  bmScriptDbSendValueAction.cxx  bmScriptOpenTCPSocketAction.h  bmScriptSendTCPAction.cxx
Examples/: CMakeLists.txt  Condor.bms  Dashboard.bms  DashboardOld.bms  ListFileInDir.bms  PixelCounter.bms
GUI/: CMakeLists.txt
Grid/: CMakeLists.txt  bmGrid.cxx  bmGrid.h  bmScriptAddMethodIdealOutputActionGrid.cxx  bmScriptAddMethodInputActionGrid.cxx  bmScriptAddMethodOutputActionGrid.cxx  bmScriptCreateExperimentActionGrid.cxx  bmScriptCreateMethodActionGrid.cxx  bmScriptDashboardSendActionGrid.cxx  bmScriptDataDirectoryAction.cxx  bmScriptExtractSliceActionGrid.cxx  bmScriptGridDataHostAction.cxx  bmScriptGridExecutableDirectoryAction.cxx  bmScriptGridMaxNodesAction.cxx  bmScriptGridOutputHostAction.cxx  bmScriptGridSetGroupingAction.cxx  bmScriptGridSetGroupingAction.h  bmScriptGridSingleNodeAction.cxx  bmScriptGridSingleNodeAction.h  bmScriptGridTempDirectoryAction.cxx  bmScriptGridTempDirectoryAction.h  bmScriptOutputDirectoryAction.cxx  bmScriptRunActionGrid.cxx  bmScriptSetActionGrid.cxx  bmScriptSetIdealOutputActionGrid.cxx
ScriptEditor/: CMakeLists.txt  bmCondor.cxx  bmCondor.h  bmGrid.cxx  bmGrid.h  bmLaunch.cxx  bmLaunch.h  bmProgressManager.cxx  bmProgressManager.h  bmScriptAction.cxx  bmScriptAction.h  bmScriptActionManager.cxx  bmScriptActionManager.h  bmScriptError.cxx  bmScriptError.h  bmScriptParser.cxx  bmScriptParser.h
Utilities/: BMString.cxx  BMString.h  CMakeLists.txt  CheckMemory.cxx  GetCPUInfo.cxx  GetCPUSpeed.cxx  GetMemoryInfo.cxx  HttpRequest.cxx  HttpRequest.h  MString.cxx  MString.h  SliceExtractor.cxx  SliceExtractor.h  SystemInfo.cxx  SystemInfo.h  TCPSocket.cxx  TCPSocket.h  Timer.cxx  Timer.h  Whetstone.cxx  Whetstone.h  XMLBufferReader.cxx  XMLBufferReader.h  XMLIniIO.cxx  XMLIniIO.h  XMLReader.cxx  XMLReader.h  XMLWriter.cxx  XMLWriter.h
(+469 files in other folders)
